movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindscope-dev
  labels:
    project: mindscope
    environment: dev
