movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/dev/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindscope-api-svc
  namespace: mindscope-dev
spec:
  selector:
    app: mindscope-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
