movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/dev/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindscope-web-svc
  namespace: mindscope-dev
spec:
  selector:
    app: mindscope-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
